// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message rendering 1`] = `
<div
  className="message"
>
  <h2>
    Testing
  </h2>
  <p>
    Message content
  </p>
</div>
`;

exports[`Message rendering with icon 1`] = `
<div
  className="message"
>
  <h2>
    <img
      src="sample-icon-url"
    />
    Testing
  </h2>
  <p>
    Message content
  </p>
</div>
`;
